<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_dang_ki_cho_thue"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.admin.global.DangKiChoThue">

    <TextView
        android:text="ĐĂNG KÍ CHO THUÊ"
        android:gravity="center"
        android:textSize="30sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView7"
        android:background="@android:color/holo_blue_dark"
        android:textColor="@android:color/background_light"
        />

    <LinearLayout
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textSize="24sp"
            android:text="@string/txt_DiaChi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtDiaChiCT"
            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/edt_DiaChi"
            android:textSize="24sp"
            android:id="@+id/edtDiaChiCT"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textSize="24sp"
            android:text="@string/txt_Gia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtGia"
            />

        <EditText
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/edtGia"
            android:layout_weight="1" />

    </LinearLayout>

    <MultiAutoCompleteTextView
        android:hint="@string/edt_GhiChu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:id="@+id/mulAuTxtGhiChuCT"
        android:layout_weight="2" />

    <GridView
        android:id="@+id/grvHinh"
        android:horizontalSpacing="5dp"
        android:verticalSpacing="10dp"
        android:layout_width="wrap_content"
        android:layout_height="196dp"
        android:layout_weight="0.63" />

    <Button

        android:text="@string/btn_XacNhan"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnXacNhanCT"
        android:background="@android:color/holo_blue_dark"
        android:textColor="@android:color/white" />
</LinearLayout>
