<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_thong_tin_tai_khoan"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.example.admin.global.ThongTinTaiKhoan">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bgr2">


        <Button
            android:id="@+id/btnXacNhan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="609dp"
            android:text="Xác nhận"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_ThongTinTaiKhoan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="59dp"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:text="Thông tin tài khoản"
            android:textColor="@color/colorAccent"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtHo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="143dp"
            android:text="@string/txt_Ho"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edtHo"
            android:layout_width="290dp"
            android:layout_height="wrap_content"

            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="143dp"
            android:background="@drawable/edit_text_style"
            android:cursorVisible="true"
            android:inputType="textPersonName"
            android:textCursorDrawable="@drawable/edit_text_cursor"
            android:textSize="26sp"
            app:layout_constraintHorizontal_bias="0.685"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtTen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="105dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="186dp"
            android:text="@string/txt_Ten"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edtTen"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="186dp"
            android:background="@drawable/edit_text_style"
            android:cursorVisible="true"
            android:inputType="textPersonName"
            android:textCursorDrawable="@drawable/edit_text_cursor"
            android:textSize="26sp"
            app:layout_constraintHorizontal_bias="0.232"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtNgaySinh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="228dp"
            android:text="@string/txt_NgaySinh"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edtNgaySinh"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="228dp"
            android:background="@drawable/edit_text_style"
            android:cursorVisible="true"
            android:inputType="textPersonName"
            android:textCursorDrawable="@drawable/edit_text_cursor"
            android:textSize="26sp"
            app:layout_constraintHorizontal_bias="0.8"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtSDT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="272dp"
            android:text="@string/txt_SDT"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edtSDT"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="269dp"
            android:background="@drawable/edit_text_style"
            android:cursorVisible="true"
            android:inputType="phone"
            android:textCursorDrawable="@drawable/edit_text_cursor"
            android:textSize="26sp"
            app:layout_constraintHorizontal_bias="0.63"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtDiaChi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="309dp"
            android:text="@string/txt_DiaChi"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edtDiaChi"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="345dp"
            android:background="@drawable/edit_text_style"
            android:cursorVisible="true"
            android:inputType="textPersonName"
            android:textCursorDrawable="@drawable/edit_text_cursor"
            android:textSize="26sp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="383dp"
            android:text="@string/txt_Email"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.007"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="420dp"
            android:background="@drawable/edit_text_style"
            android:cursorVisible="true"
            android:inputType="textEmailAddress"
            android:textCursorDrawable="@drawable/edit_text_cursor"
            android:textSize="26sp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <MultiAutoCompleteTextView

            android:id="@+id/mulAuTxtGhiChu"
            android:layout_width="360dp"
            android:layout_height="137dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="461dp"
            android:background="@drawable/edit_text_style"
            android:cursorVisible="true"
            android:hint="@string/edt_GhiChu"
            android:textCursorDrawable="@drawable/edit_text_cursor"
            android:textSize="24sp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>
